--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "eslint": "^8.20.0",
+    "eslint-plugin-react": "^7.30.1",
     "react-scripts": "latest"
   },
   "browserslist": [
