--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "eslint": "^8.20.0",
     "eslint-plugin-react": "^7.30.1",
+    "prettier": "^2.7.1",
     "react-scripts": "latest"
   },
   "browserslist": [
