Configure prettier (package.json)

--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "prettier": {
+    "printWidth": 60,
+    "singleQuote": true,
+    "semi": false
+  }
 }
