--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react": "^16.8 || ^17.0 || ^18.0",
     "@types/react-dom": "^16.8 || ^17.0 || ^18.0",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-is": ">= 16.8.0",
@@ -35,7 +36,7 @@
     "not op_mini all"
   ],
   "prettier": {
-    "printWidth": 60,
+    "printWidth": 80,
     "singleQuote": true,
     "semi": false
   }
